ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-demo-app-ingress-service"
  labels:
    # Timestamp used in order to force reload of the secret
    last_updated: "1494099933"
spec:
  tls:
  - hosts:
    - houzztec.com
    secretName: letsencrypt-certs
  rules:
  - host: houzztec.com
    http:
      paths:
      # The * is needed so that all traffic gets redirected to the nginx box
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
      # We could add a /.well-known/* route here and redirect to the job directory
      # but our job does not have a health route
